<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Medical report</string>
    <string name="action_settings">Settings</string>
    <string name="insert">Insert</string>
    <string name="about">About the application</string>
    <string name="share">Share the app!</string>
    <string name="list_of_ventures">List of all events</string>
    <string name="title_activity_insert_event">Insert an Event</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="form_name_event">Specify name of an event</string>
    <string name="form_place_event">Where will be an event held?</string>
    <string name="popup_event_edit">Edit</string>
    <string name="popup_event_delete">Delete</string>
    <string name="title_activity_list_of_participants">List of all participants</string>
    <string name="list_participants">List of all Participants</string>
    <string name="title_activity_insert_participant">Insert Participant</string>
    <string name="specify_participant_name">Specify a name of a participant.</string>
    <string name="specify_participant_surname">Specify a surname of a participant.</string>
    <string name="title_activity_list_of_injuries">List Of Injuries</string>
    <string name="list_injuries">List of all injuries</string>
    <string name="title_activity_insert_injury">Insert Injury</string>
    <string name="name_of_injury">Set name of an injury.</string>
    <string name="injury_description">Describe an injury.</string>
    <string name="title_activity_injury_info">Injury Info</string>
    <string name="title_activity_aboutapp">About an app</string>
    <string name="about_app">"This application was created as a school project at Czech University of Life Sciences Prague.\nAuthor Radim Bureš."</string>
    <string name="warning">Fields can not be empty!</string>
    <string name="share_text">"Hello, try this awesome app. Download it at <a href="www.medicalreports.com">www.medicalreports.com</a>]]</string>
    <string name="share_via">"Share via"</string>
    <string name="share_subject">Check this app!</string>

</resources>
